--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ footer_text: >
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: 👨‍🎓 # the emoji used as the favicon
-url: https://akashsharma02.github.io/ # the base hostname & protocol for your site
-baseurl: /newsite # the subpath of your site, e.g. /blog/
+url: https://akashsharma02.github.io # the base hostname & protocol for your site
+baseurl: # the subpath of your site, e.g. /blog/
 last_updated: true # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 
@@ -70,14 +70,14 @@ rss_icon: false
 contact_note: >
   The best way to reach me is via email.
 
-google_analytics: UA-176795401 # out your google-analytics code
+google_analytics: UA-176795401-1 # out your google-analytics code
 panelbear_analytics: XXXXXXXXX # panelbear analytics site ID
 
 # -----------------------------------------------------------------------------
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: The Akash Sharma blog  # your blog must have a name for it to show up in the nav bar
+blog_name: # your blog must have a name for it to show up in the nav bar
 blog_description:
 permalink: /blog/:year/:title/
 
@@ -148,6 +148,7 @@ plugins:
   - jekyll-sitemap
   - jekyll-target-blank
   - jekyll-twitter-plugin
+  - jekyll-responsive-image
   - jemoji
 
 # Sitemap settings
@@ -204,7 +205,12 @@ scholar:
 
   query: "@*"
 
-
+responsive_image:
+  # template: _includes/responsive-image.html
+  sizes:
+    - width: 320
+    - width: 480
+    - width: 800
 # -----------------------------------------------------------------------------
 # Responsive WebP Images
 # -----------------------------------------------------------------------------
@@ -247,7 +253,7 @@ enable_tooltips:            false  # enables automatic tooltip links generated
 enable_darkmode:            true   # enables switching between light/dark modes
 enable_navbar_social:       false  # enables displaying social links in the
                                    # navbar on the about page
-enable_project_categories:  true   # enables categorization of projects into
+enable_project_categories:  false   # enables categorization of projects into
                                    # multiple categories
 enable_medium_zoom:         true   # enables image zoom feature (as on medium.com)
 
