--- a/_config.yml
+++ b/_config.yml
@@ -147,7 +147,7 @@ plugins:
   - jekyll/scholar
   - jekyll-sitemap
   - jekyll-target-blank
-  - jekyll-twitter-plugin
+  # - jekyll-twitter-plugin
   - jekyll-responsive-image
   - jemoji
 
