--- a/_config.yml
+++ b/_config.yml
@@ -52,9 +52,10 @@ footer_fixed: true
 search_enabled: false
 socials_in_search: true
 bib_search: true
+cv_pdf_only: true
 
 # Dimensions
-max_width: 930px
+max_width: 800px
 
 # TODO: add layout settings (single page vs. multi-page)
 
