--- a/_config.yml
+++ b/_config.yml
@@ -113,7 +113,7 @@ youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 zotero_username: # your zotero username
 
 contact_note: >
-  The best way to each me is via email. 
+  The best way to reach me is via email. 
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
